// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyPlaceRewardsOverviewTile component should render correctly when coupons are not present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="black"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myPlaceRewardsHeading"
    textDecoration={null}
  />
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={24}
  />
  <View>
    <Styled(BodyCopy)
      accessibilityText=""
      color="black"
      dataLocator=""
      fontFamily="secondary"
      fontSize="fs13"
      margin={null}
      numberOfLines={null}
      text="lbl_overview_myPlaceRewardsDesc"
      textDecoration={null}
    />
    <Styled(View)>
      <Styled(Anchor)
        accessibilityLabel="lbl_overview_myPlaceRewardsShopNow"
        accessibilityRole="link"
        anchorVariation="button"
        borderColor="black"
        borderWidth="1"
        buttonVariation="variable-width"
        centered={true}
        colorName={null}
        customStyle={Object {}}
        dataLocator="accountoverview-myplacerewardstile-startshopbtn"
        fill="WHITE"
        fullWidth={true}
        locator=""
        onPress={[Function]}
        text="lbl_overview_myPlaceRewardsShopNow"
        visible={false}
      />
    </Styled(View)>
  </View>
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={24}
  />
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="variable-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_overview_myPlaceRewardsCTA"
      theme={Object {}}
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;

exports[`MyPlaceRewardsOverviewTile component should render correctly when coupons are present 1`] = `
<Styled(View)>
  <Styled(BodyCopy)
    accessibilityText=""
    color="black"
    dataLocator=""
    fontFamily="secondary"
    fontSize="fs16"
    fontWeight="black"
    margin={null}
    numberOfLines={null}
    text="lbl_overview_myPlaceRewardsHeading"
    textDecoration={null}
  />
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={24}
  />
  <Styled(View)>
    <View>
      <Styled(BodyCopy)
        accessibilityText=""
        data-locator="accountoverview-myplacerewatdstile-youhaverewardtext"
        dataLocator=""
        fontSize="fs14"
        fontWeight="semibold"
        margin={null}
        numberOfLines={null}
        text=""
        textDecoration={null}
      />
    </View>
    <Styled(View)>
      <CouponList
        commonLabels={Object {}}
        coupons={
          Immutable.List [
            Object {},
          ]
        }
        labels={
          Object {
            "lbl_overview_myPlaceRewardsAvailable": "",
          }
        }
        sliceCount={2}
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(LineComp)
    borderColor="gray"
    borderWidth={0.5}
    marginBottom={20}
    marginTop={24}
  />
  <Connect(BonusPointsDays)
    labels={
      Object {
        "lbl_overview_myPlaceRewardsAvailable": "",
      }
    }
    view="read"
  />
  <Styled(View)>
    <Styled(CustomButton)
      active={false}
      buttonVariation="variable-width"
      color=""
      customStyle={Object {}}
      customTextStyle={null}
      disableButton={false}
      fill="BLUE"
      fullWidth=""
      iconColor="gray.800"
      iconName="chevron-down"
      iconSize="fs12"
      locator=""
      navigation={Object {}}
      onPress={[Function]}
      selected={false}
      selectedIcon="chevron-up"
      showIcon={false}
      text="lbl_overview_myPlaceRewardsCTA"
      theme={Object {}}
      url=""
    />
  </Styled(View)>
</Styled(View)>
`;
